--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
       <h3>Shake Shake Shake</h3>
       <h4>Grow And shrink</h4>
     </div>
+    <div class="ball">
+
+      </div>
   </body>
 </html>
